2019-10-29/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8s-demo-deployment
spec:
  selector:
    matchLabels:
      app: k8s
  replicas: 10
  minReadySeconds: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: k8s
    spec:
      containers:
      - name: k8s-demo-pod
        image: k8s-demo:0.2
        ports:
        - containerPort: 80
