2019-10-29/mysql.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    name: mysql
  name: mysql-server
spec:
  containers:
    - name: mysql
      image: mysql:8.0.18
      #command: [ "/bin/sh", "-c", "env |grep MYSQL_TCP_PORT" ]
