2019-10-29/svc2.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8s-demo2-svc
spec:
  selector:
    app: k8s
  type: NodePort
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
