2019-10-29/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: k8s-demo-ingress
spec:
  backend:
    serviceName: k8s-demo-svc
    servicePort: 80
